--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python-dotenv==1.0.1
 python-dotenv>=0,<1
 SQLAlchemy>=1.4,<2
 psycopg2>=2,<3
@@ -8,4 +9,3 @@ pyrogram>=2,<3
 flask
 gunicorn
 flask_restful
-dotenv
